// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSOStatus Component Matches the snapshot when account does not exist 1`] = `
<div>
  <p>
    Account does not exist, form will be here
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;

exports[`CSOStatus Component Matches the snapshot when account exists 1`] = `
<div>
  <p>
    Account exists! Proceed
  </p>
  <div>
    <button
      className="normal-white btn"
      onClick={[Function]}
      type="button"
    >
      Cancel and return to client
    </button>
  </div>
</div>
`;
